--- a/.github/workflows/report-schedules.yml
+++ b/.github/workflows/report-schedules.yml
@@ -21,5 +21,5 @@ jobs:
           SHOPIFY_ACCESS_TOKEN: ${{ secrets.SHOPIFY_ACCESS_TOKEN }}
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
-          EMAIL_RECIPIENTS: "gil@kitchenartsandletters.com,matt@kitchenartsandletters.com"
+          EMAIL_RECIPIENTS: "gil@kitchenartsandletters.com"
         run: python -m reports.product_validation
